--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 title: Hi, I'm Roman
-Biologist / Pharmacogenomics / R & Shiny Expert
+subtitle: Biologist / Pharmacogenomics / R & Shiny Expert
 ---
 
