--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 title: Hi, I'm Roman
-subtitle: Biologist / Pharmacogenomics / R & Shiny Expert
+subtitle: Biology / Pharmacogenomics / R & Shiny
 ---
 
